fixing overflow

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -49,6 +49,9 @@
 ::-webkit-scrollbar-thumb:hover{
     background: #718096;
 }
+body.modal-open {
+    overflow: hidden;
+}
 html,
 body,
 #app {
